Remove dead connection string

--- a/Vinlotteri/appsettings.json
+++ b/Vinlotteri/appsettings.json
@@ -6,9 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-"AllowedHosts": "*",
-
-  "ConnectionStrings": {
-    "vinlotteridb": "Host=c.vinlotteri-dbcluster.postgres.database.azure.com;Database=citus;Username=citus;Password=YJP7fEK6fspMcDC;Include Error Detail=true"
-  }
+"AllowedHosts": "*"
 }
